Fix hero watermark vertical position on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -280,7 +280,7 @@ img { max-width: 100%; display: block; }
 
 .hero-logo-watermark {
     position: absolute;
-    top: 50%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 500px;
@@ -1045,6 +1045,7 @@ img { max-width: 100%; display: block; }
     .hero-logo-watermark {
         width: 300px;
         height: 300px;
+        top: 40%;
     }
 
     .hero-title {
